Disable Middleman watcher in build script
Watching file changes is really unnecessary for the build command.
This feature also may cause problems in some limited environments.

--- a/script/build
+++ b/script/build
@@ -12,4 +12,4 @@ cd "$(dirname "$0")/.."
 . script/bootstrap
 
 einfo 'Building site...'
-bundle exec middleman build --build-dir="$BUILD_DIR"
+bundle exec middleman build --build-dir="$BUILD_DIR" --watcher-disable
