--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ rvm: 2.3.1
 cache:
   bundler: true
 before_install:
-  - openssl aes-256-cbc -K $encrypted_15090085a9e1_key -iv $encrypted_15090085a9e1_iv -in .deploykey.enc -out .deploykey -d
-  - chmod 600 .deploykey
+  - ./script/travis-decrypt
 script:
   - ./script/deploy
